--- a/TestData/pytest.ini
+++ b/TestData/pytest.ini
@@ -2,13 +2,14 @@
 
 ;命令参数 ，多个参数用空格分开
 ;addopts = -vs -n=2
-addopts = -vs --html=../TestReport/report.html --self-contained-html
+;addopts = -vs --html=../TestReport/report.html --self-contained-html
 ;addopts = -vs -m "model1"
+addopts = -vs --alluredir ./temp --clean-alluredir
 ;执行测试的路径
 
 ;testpaths = ./model2_testcase
-testpaths = ./model1_testcase
-
+;testpaths = ./model1_testcase
+testpaths = ./http_testcase
 ;匹配路径下的测试模块
 
 python_files = test_*.py
